# coursework

./: CMakeLists.txt  main.cpp
structures/color/: color.h
structures/cubes/: cubes.cpp  cubes.h
structures/player/: player.cpp  player.h
structures/playing_field/: playing_field.cpp  playing_field.h
